[package]
name = "fly_io_challenges"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "echo"
path = "bin/echo.rs"

[[bin]]
name = "unique_ids"
path = "bin/unique_ids.rs"

[lib]
name = "maelstrom"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
